fixed spacing

--- a/src/styles/Tracks.css
+++ b/src/styles/Tracks.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  margin-bottom: 30vw;
 }
 
 .Track-section__background{
@@ -19,7 +20,7 @@
 
 .Track-section__background2{
   position: absolute;
-  bottom: -90%;
+  bottom: -130%;
   right: -35%;
   width: 100%;
   height: 150%;
@@ -216,7 +217,7 @@ img {
 @media screen and (max-width: 500px) {
 
   .Track-section__background2{
-    bottom: -50%;
+    bottom: -80%;
     height: 100%;
   }
   
